--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!--поиск родителя из репозитория -->
 	</parent>
 	<groupId>kurpatow</groupId>
 	<artifactId>Yoko-c-telegram-bot</artifactId>
@@ -14,7 +14,7 @@
 	<name>Yoko-c-telegram-bot</name>
 	<description>Yoko-c-telegram-bot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>18</java.version>
 		<telegram.version>6.5.0</telegram.version>
 	</properties>
 	<dependencies>
