--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 bot.name=Yoko_c_telegram_bot
-bot.token=6085962900:AAEdgPjHIlVr-pmCltZfnQH7vKECy-O9GHQ
+bot.token=6085962900:AAGFZI6FWVZhaBxRsvOT9beVIJvwi2uXVzg
+
+#db related settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/yokotgbot
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
