--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 bot.name=Yoko_c_telegram_bot
 bot.token=6085962900:AAGFZI6FWVZhaBxRsvOT9beVIJvwi2uXVzg
+bot.owner=783177157
 
 #db related settings
 spring.jpa.hibernate.ddl-auto=update
