--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ bot.name=Yoko_c_telegram_bot
 bot.token=6085962900:AAGFZI6FWVZhaBxRsvOT9beVIJvwi2uXVzg
 bot.owner=783177157
 
+cron.scheduled=0 * * * * * 
+
 #db related settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/yokotgbot
